--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,9 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev
+          sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev \
+            libfreetype6-dev libfontconfig1-dev libharfbuzz-dev libfribidi-dev \
+            libpng-dev libtiff5-dev libjpeg-dev
       
       - name: Install R packages
         run: |
@@ -38,7 +40,7 @@ jobs:
       - name: Export Shinylive app
         run: |          
           # Export to site directory
-          shinylive::export(".", "site")
+          shinylive::export("app", "site")
         shell: Rscript {0}
       
       - name: Upload artifact
