--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev \
             libfreetype6-dev libfontconfig1-dev libharfbuzz-dev libfribidi-dev \
-            libpng-dev libtiff5-dev libjpeg-dev
+            libpng-dev libtiff5-dev libjpeg-dev libarchive-dev
       
       - name: Install R packages
         run: |
